--- a/notebook/config-server/src/main/resources/application.properties
+++ b/notebook/config-server/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=config-server
-server.port=8888
+server.port=8889
 
 
-spring.cloud.config.server.git.uri=https://github.com/forezp/SpringcloudConfig/
-spring.cloud.config.server.git.searchPaths=respo
+spring.cloud.config.server.git.uri=https://github.com/kennyije/springcloud/
+spring.cloud.config.server.git.searchPaths=config-server
 spring.cloud.config.label=master
-spring.cloud.config.server.git.username=your username
-spring.cloud.config.server.git.password=your password
+spring.cloud.config.server.git.username=kennyije
+spring.cloud.config.server.git.password=1992lyw
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
